# krib

./: BACKEND_INTEGRATION.md  FRONTEND_INTEGRATION.md  HARDENING_QUICK_START.md  SCALABILITY_IMPLEMENTATION.md  SCALING_QUICK_REFERENCE.md  SECURITY.md  SECURITY_HARDENING_COMPLETE.md  data  docker-compose.yml  policy.md  redis.conf  requirement.md  scalability.md  security1.md
client/: .env  .env.production  index.html  package.json  pnpm-lock.yaml
client/src/: App.css  App.tsx  index.css  temp.tsx
client/src/components/: CityStats.tsx  ContactReveal.tsx  Header.tsx  InputArea.tsx  MessageItem.tsx  MessageList.tsx  PolicyDialog.tsx  Privacy.tsx  Safety.tsx  Terms.tsx
client/src/data/: stateandcity.json
client/src/hooks/: useWebSocket.ts
client/src/lib/: api.ts  fingerprint.ts  randomNames.ts  utils.ts
client/src/store/: useChatStore.ts
client/src/types/: index.ts
server/: .env.example  Cargo.toml  Dockerfile
server/docs/: MODERATION.md
server/src/: handlers.rs  main.rs  models.rs  redis_client.rs  routes.rs  scaling.rs  state.rs  websocket.rs
server/src/security/: burst_profiler.rs  composite_key.rs  content_filter.rs  governor_rate_limiter.rs  ip_reputation.rs  middleware.rs  mod.rs  moderation.rs  rate_limiter.rs  shadowban.rs
