[package]
name = "kirb-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
anyhow = "1.0"
futures = "0.3"
redis = { version = "0.24", features = ["tokio-comp", "connection-manager", "tokio-native-tls-comp", "streams"] }
sha2 = "0.10"
hex = "0.4"
regex = "1.10"
dotenv = "0.15"
once_cell = "1.19"
